# qemu-sgi

hw/char/: serial-mm.c
hw/display/: Kconfig  meson.build  sgi_gbe.c  sgi_glaccel.c  sgi_newport.c  trace-events
hw/input/: ps2.c
hw/mips/: Kconfig  meson.build  sgi_indy.c  sgi_o2.c  sgi_octane.c
hw/misc/: Kconfig  meson.build  sgi_arcs.c  sgi_bootdisk.c  sgi_bridge.c  sgi_crime.c  sgi_crime_re.c  sgi_heart.c  sgi_hpc1.c  sgi_hpc3.c  sgi_mace.c  sgi_mc.c  sgi_pvaudio.c  sgi_pvmem.c  sgi_pvnet.c  sgi_smp.c  trace-events
hw/nvram/: eeprom93xx.c
hw/scsi/: Kconfig  meson.build  scsi-disk.c  wd33c93.c
include/hw/display/: sgi_gbe.h  sgi_glaccel.h  sgi_newport.h
include/hw/misc/: sgi_arcs.h  sgi_bootdisk.h  sgi_bridge.h  sgi_crime.h  sgi_crime_re.h  sgi_heart.h  sgi_hpc1.h  sgi_hpc3.h  sgi_mace.h  sgi_mc.h  sgi_pvaudio.h  sgi_pvmem.h  sgi_pvnet.h  sgi_smp.h
include/hw/scsi/: wd33c93.h
